tests/neg-custom-args/captures/byname.check
-- Error: tests/neg-custom-args/captures/byname.scala:5:21 -------------------------------------------------------------
5 |  def g(x: Int) = if cap2 == cap2 then 1 else x // error
  |                     ^^^^
  |                     Another capture checking run needs to be scheduled because
  |                     reference (cap2 : Cap) is not included in the allowed capture set {} of method f
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/byname.scala:10:6 ----------------------------------------
10 |  h(f2())  // error
   |    ^^^^
   |    Found:    Int ->{cap1} Int
   |    Required: Int ->? Int
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/byname.scala:19:5 -------------------------------------------------------------
19 |  h(g()) // error
   |    ^^^
   |    reference (cap2 : Cap) is not included in the allowed capture set {cap1}
   |    of an enclosing function literal with expected type () ?->{cap1} I
-- Error: tests/neg-custom-args/captures/byname.scala:22:12 ------------------------------------------------------------
22 |  h2(() => g())() // error
   |           ^^^
   |           reference (cap2 : Cap) is not included in the allowed capture set {cap1}
   |           of an enclosing function literal with expected type () ->{cap1} I
